--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -278,9 +278,40 @@
             background-size: 80%;
             background-image: url('https://img.icons8.com/?size=100&id=Y1Jzb9yc1jLC&format=png&color=FFFFFF');
         }
-        &.set-focus::before{
+        &.set-focus.dark-icon::before{
+            margin-right: 0;
+            margin-left: 0;
             background-size: 80%;
-            background-image: url('https://img.icons8.com/?size=100&id=123951&format=png&color=FFFFFF');
+            background-position: center;
+            background-image: url('https://img.icons8.com/?size=100&id=123951&format=png&color=000000');
+        }
+        &.title-position.dark-icon::before{
+            margin-right: 0;
+            margin-left: 0;
+            background-size: 100%;
+            background-position: center;
+            background-image: url('https://img.icons8.com/?size=100&id=N1vYa7LVzeKx&format=png&color=000000');
+        }
+        &.cover-size.dark-icon::before{
+            margin-right: 0;
+            margin-left: 0;
+            background-size: 60%;
+            background-position: center;
+            background-image: url('https://img.icons8.com/?size=100&id=7790&format=png&color=000000');
+        }
+        &.delete-red.dark-icon::before{
+            margin-right: 0;
+            margin-left: 0;
+            background-size: 100%;
+            background-position: center;
+            background-image: url('https://img.icons8.com/?size=100&id=67884&format=png&color=ff2d55');
+        }
+        &.colour-wheel.dark-icon::before{
+            margin-right: 0;
+            margin-left: 0;
+            background-size: 100%;
+            background-position: center;
+            background-image: url('https://img.icons8.com/?size=100&id=EDu09r33OBsd&format=png&color=000000');
         }
         &.image::before{
             background-size: 80%;
